<resources>
    <string name="app_name">10 Hero Dota</string>
    <string name="heroes_name">Nama Hero Dota</string>
    <string name="detail">Detail</string>
    <string name="Nama">Muhammad Zaki Hanif</string>
    <string name="Email">Zakihanif155@gmail.com</string>
    <string name="No_telp">No telp : 081933167507</string>
    <string name="ability">Ability</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>