<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heroes_name"
            android:textAlignment="gravity"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp">

        </TextView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="25dp"
            tools:src="@tools:sample/avatars"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ability"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp">


        </TextView>
        
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_item_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textColor="@color/black"
                android:layout_marginLeft="16dp">

            </TextView>
        </androidx.cardview.widget.CardView>



    </LinearLayout>
</ScrollView>